--- a/index.html
+++ b/index.html
@@ -16,90 +16,137 @@
     <title>Frontend Mentor | Time tracking dashboard</title>
   </head>
   <body>
-    Report for Jeremy Robson Daily Weekly Monthly Work 5hrs
-    <!-- daily -->
-    Previous - 7hrs
-    <!-- daily -->
-    32hrs
-    <!-- weekly -->
-    Previous - 36hrs
-    <!-- weekly -->
-    103hrs
-    <!-- monthly -->
-    Previous - 128hrs
-    <!-- monthly -->
+    <div class="container">
+      <div class="card profile one">
+        <div class="outer">
+          <div class="inner">
+            <p>Report for</p>
+            <h1>Jeremy Robson</h1>
+          </div>
+          <ul>
+            <li><button>Daily</button></li>
+            <li><button>Weekly</button></li>
+            <li><button>Monthly</button></li>
+          </ul>
+        </div>
+      </div>
+      <!-- work section -->
+      <div class="card work two">
+        <div class="outer">
+          <div class="inner">
+            Work
+            <p class="daily-current">5hrs</p>
+            <p class="daily-previous">Previous - 7hrs</p>
 
-    Play 1hr
-    <!-- daily -->
-    Previous - 2hrs
-    <!-- daily -->
-    10hrs
-    <!-- weekly -->
-    Previous - 8hrs
-    <!-- weekly -->
-    23hrs
-    <!-- monthly -->
-    Previous - 29hrs
-    <!-- monthly -->
+            <p class="weekly-current">32hrs</p>
+            <p class="weekly-previous">Previous - 36hrs</p>
 
-    Study 0hrs
-    <!-- daily -->
-    Previous - 1hr
-    <!-- daily -->
-    4hrs
-    <!-- weekly -->
-    Previous - 7hrs
-    <!-- weekly -->
-    13hrs
-    <!-- monthly -->
-    Previous - 19hrs
-    <!-- monthly -->
+            <p class="monthly-current">103hrs</p>
+            <p class="monthly-previous">Previous - 128hrs</p>
+          </div>
+        </div>
+      </div>
+      <!-- /work section -->
 
-    Exercise 1hr
-    <!-- daily -->
-    Previous - 1hr
-    <!-- daily -->
-    4hrs
-    <!-- weekly -->
-    Previous - 5hrs
-    <!-- weekly -->
-    11hrs
-    <!-- monthly -->
-    Previous - 18hrs
-    <!-- monthly -->
+      <!-- play section -->
+      <div class="card">
+        <div class="outer">
+          <div class="inner">
+            Play
+            <p class="daily-current">1hr</p>
+            <p class="daily-previous">Previous - 2hrs</p>
 
-    Social 1hr
-    <!-- daily -->
-    Previous - 3hrs
-    <!-- daily -->
-    5hrs
-    <!-- weekly -->
-    Previous - 10hrs
-    <!-- weekly -->
-    21hrs
-    <!-- monthly -->
-    Previous - 23hrs
-    <!-- monthly -->
+            <p class="weekly-current">10hrs</p>
+            <p class="weekly-previous">Previous - 8hrs</p>
 
-    Self Care 0hrs
-    <!-- daily -->
-    Previous - 1hr
-    <!-- daily -->
-    2hrs
-    <!-- weekly -->
-    Previous - 2hrs
-    <!-- weekly -->
-    7hrs
-    <!-- monthly -->
-    Previous - 11hrs
-    <!-- monthly -->
+            <p class="monthly-current">23hrs</p>
+            <p class="monthly-previous">Previous - 29hrs</p>
+          </div>
+        </div>
+      </div>
+      <!-- /play section -->
 
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">SabWaFei</a>.
+      <!-- study section -->
+      <div class="card">
+        <div class="outer">
+          <div class="inner">
+            Study
+            <p class="daily-current">0hrs</p>
+            <p class="daily-previous">Previous - 1hr</p>
+
+            <p class="weekly-current">4hrs</p>
+            <p class="weekly-previous">Previous - 7hrs</p>
+
+            <p class="monthly-current">13hrs</p>
+            <p class="monthly-previous">Previous - 19hrs</p>
+          </div>
+        </div>
+      </div>
+      <!-- /study section -->
+
+      <!-- exercise section -->
+      <div class="card">
+        <div class="outer">
+          <div class="inner">
+            Exercise
+            <p class="daily-current">1hr</p>
+            <p class="daily-previous">Previous - 1hr</p>
+
+            <p class="weekly-current">4hrs</p>
+            <p class="weekly-previous">Previous - 5hrs</p>
+
+            <p class="monthly-current">11hrs</p>
+            <p class="monthly-previous">Previous - 18hrs</p>
+          </div>
+        </div>
+      </div>
+      <!-- /exercise section -->
+
+      <!-- social section -->
+      <div class="card">
+        <div class="outer">
+          <div class="inner">
+            Social
+            <p class="daily-current">1hr</p>
+            <p class="daily-previous">Previous - 3hrs</p>
+
+            <p class="weekly-current">5hrs</p>
+            <p class="weekly-previous">Previous - 10hrs</p>
+
+            <p class="monthly-current">21hrs</p>
+            <p class="monthly-previous">Previous - 23hrs</p>
+          </div>
+        </div>
+      </div>
+      <!-- /social section -->
+
+      <!-- self care section -->
+      <div class="card">
+        <div class="outer">
+          <div class="inner">
+            Self Care
+            <p class="daily-current">0hrs</p>
+            <p class="daily-previous">Previous - 1hr</p>
+
+            <p class="weekly-current">2hrs</p>
+            <p class="weekly-previous">Previous - 2hrs</p>
+
+            <p class="monthly-current">7hrs</p>
+            <p class="monthly-previous">Previous - 11hrs</p>
+          </div>
+        </div>
+      </div>
+      <!-- /self care section -->
     </div>
+    <footer>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">SabWaFei</a>.
+      </div>
+    </footer>
+
     <script src="/scripts/scripts.js"></script>
   </body>
 </html>
