--- a/index.html
+++ b/index.html
@@ -18,8 +18,13 @@
   <body>
     <div class="container">
       <div class="card profile one">
-        <div class="outer">
-          <div class="inner">
+        <div class="one-outer outer">
+          <div class="one-inner inner">
+            <img
+              src="/images/image-jeremy.png"
+              alt="user profile picture"
+              class="profile-pic"
+            />
             <p>Report for</p>
             <h1>Jeremy Robson</h1>
           </div>
@@ -32,8 +37,11 @@
       </div>
       <!-- work section -->
       <div class="card work two">
-        <div class="outer">
-          <div class="inner">
+        <div class="two-outer outer">
+          <div class="icon-container">
+            <img src="/images/icon-work.svg" alt="" class="icon" />
+          </div>
+          <div class="two-inner inner">
             Work
             <p class="daily-current">5hrs</p>
             <p class="daily-previous">Previous - 7hrs</p>
@@ -49,9 +57,12 @@
       <!-- /work section -->
 
       <!-- play section -->
-      <div class="card">
-        <div class="outer">
-          <div class="inner">
+      <div class="card play three">
+        <div class="outer outer">
+          <div class="icon-container">
+            <img src="/images/icon-play.svg" alt="" class="icon" />
+          </div>
+          <div class="inner inner">
             Play
             <p class="daily-current">1hr</p>
             <p class="daily-previous">Previous - 2hrs</p>
@@ -67,9 +78,12 @@
       <!-- /play section -->
 
       <!-- study section -->
-      <div class="card">
-        <div class="outer">
-          <div class="inner">
+      <div class="card study four">
+        <div class="outer outer">
+          <div class="icon-container">
+            <img src="/images/icon-study.svg" alt="" class="icon" />
+          </div>
+          <div class="inner inner">
             Study
             <p class="daily-current">0hrs</p>
             <p class="daily-previous">Previous - 1hr</p>
@@ -85,9 +99,12 @@
       <!-- /study section -->
 
       <!-- exercise section -->
-      <div class="card">
-        <div class="outer">
-          <div class="inner">
+      <div class="card exercise five">
+        <div class="outer outer">
+          <div class="icon-container">
+            <img src="/images/icon-exercise.svg" alt="" class="icon" />
+          </div>
+          <div class="inner inner">
             Exercise
             <p class="daily-current">1hr</p>
             <p class="daily-previous">Previous - 1hr</p>
@@ -103,9 +120,12 @@
       <!-- /exercise section -->
 
       <!-- social section -->
-      <div class="card">
-        <div class="outer">
-          <div class="inner">
+      <div class="card social six">
+        <div class="outer outer">
+          <div class="icon-container">
+            <img src="/images/icon-social.svg" alt="" class="icon" />
+          </div>
+          <div class="inner inner">
             Social
             <p class="daily-current">1hr</p>
             <p class="daily-previous">Previous - 3hrs</p>
@@ -121,9 +141,12 @@
       <!-- /social section -->
 
       <!-- self care section -->
-      <div class="card">
-        <div class="outer">
-          <div class="inner">
+      <div class="card self-care seven">
+        <div class="outer outer">
+          <div class="icon-container">
+            <img src="/images/icon-self-care.svg" alt="" class="icon" />
+          </div>
+          <div class="inner inner">
             Self Care
             <p class="daily-current">0hrs</p>
             <p class="daily-previous">Previous - 1hr</p>
