--- a/index.html
+++ b/index.html
@@ -20,13 +20,17 @@
       <div class="card profile one">
         <div class="one-outer outer">
           <div class="one-inner inner">
-            <img
-              src="/images/image-jeremy.png"
-              alt="user profile picture"
-              class="profile-pic"
-            />
-            <p>Report for</p>
-            <h1>Jeremy Robson</h1>
+            <div class="one-inner-left">
+              <img
+                src="/images/image-jeremy.png"
+                alt="user profile picture"
+                class="profile-pic"
+              />
+            </div>
+            <div class="one-inner-right">
+              <p>Report for</p>
+              <h1>Jeremy Robson</h1>
+            </div>
           </div>
           <ul>
             <li><button>Daily</button></li>
@@ -42,15 +46,24 @@
             <img src="/images/icon-work.svg" alt="" class="icon" />
           </div>
           <div class="two-inner inner">
-            Work
-            <p class="daily-current">5hrs</p>
-            <p class="daily-previous">Previous - 7hrs</p>
+            <div class="inner-top">
+              <p class="type">Work</p>
+              <div class="meatball-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+              </div>
+            </div>
+            <div class="inner-bottom">
+              <h1 class="daily-current">5hrs</h1>
+              <p class="daily-previous">Previous - 7hrs</p>
 
-            <p class="weekly-current">32hrs</p>
-            <p class="weekly-previous">Previous - 36hrs</p>
+              <h1 class="weekly-current">32hrs</h1>
+              <p class="weekly-previous">Previous - 36hrs</p>
 
-            <p class="monthly-current">103hrs</p>
-            <p class="monthly-previous">Previous - 128hrs</p>
+              <h1 class="monthly-current">103hrs</h1>
+              <p class="monthly-previous">Previous - 128hrs</p>
+            </div>
           </div>
         </div>
       </div>
@@ -58,20 +71,29 @@
 
       <!-- play section -->
       <div class="card play three">
-        <div class="outer outer">
+        <div class="three-outer outer">
           <div class="icon-container">
             <img src="/images/icon-play.svg" alt="" class="icon" />
           </div>
-          <div class="inner inner">
-            Play
-            <p class="daily-current">1hr</p>
-            <p class="daily-previous">Previous - 2hrs</p>
+          <div class="three-inner inner">
+            <div class="inner-top">
+              <p class="type">Play</p>
+              <div class="meatball-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+              </div>
+            </div>
+            <div class="inner-bottom">
+              <h1 class="daily-current">1hr</h1>
+              <p class="daily-previous">Previous - 2hrs</p>
 
-            <p class="weekly-current">10hrs</p>
-            <p class="weekly-previous">Previous - 8hrs</p>
+              <h1 class="weekly-current">10hrs</h1>
+              <p class="weekly-previous">Previous - 8hrs</p>
 
-            <p class="monthly-current">23hrs</p>
-            <p class="monthly-previous">Previous - 29hrs</p>
+              <h1 class="monthly-current">23hrs</h1>
+              <p class="monthly-previous">Previous - 29hrs</p>
+            </div>
           </div>
         </div>
       </div>
@@ -79,20 +101,29 @@
 
       <!-- study section -->
       <div class="card study four">
-        <div class="outer outer">
+        <div class="four-outer outer">
           <div class="icon-container">
             <img src="/images/icon-study.svg" alt="" class="icon" />
           </div>
-          <div class="inner inner">
-            Study
-            <p class="daily-current">0hrs</p>
-            <p class="daily-previous">Previous - 1hr</p>
+          <div class="four-inner inner">
+            <div class="inner-top">
+              <p class="type">Study</p>
+              <div class="meatball-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+              </div>
+            </div>
+            <div class="inner-bottom">
+              <h1 class="daily-current">0hrs</h1>
+              <p class="daily-previous">Previous - 1hr</p>
 
-            <p class="weekly-current">4hrs</p>
-            <p class="weekly-previous">Previous - 7hrs</p>
+              <h1 class="weekly-current">4hrs</h1>
+              <p class="weekly-previous">Previous - 7hrs</p>
 
-            <p class="monthly-current">13hrs</p>
-            <p class="monthly-previous">Previous - 19hrs</p>
+              <h1 class="monthly-current">13hrs</h1>
+              <p class="monthly-previous">Previous - 19hrs</p>
+            </div>
           </div>
         </div>
       </div>
@@ -100,20 +131,29 @@
 
       <!-- exercise section -->
       <div class="card exercise five">
-        <div class="outer outer">
+        <div class="five-outer outer">
           <div class="icon-container">
             <img src="/images/icon-exercise.svg" alt="" class="icon" />
           </div>
-          <div class="inner inner">
-            Exercise
-            <p class="daily-current">1hr</p>
-            <p class="daily-previous">Previous - 1hr</p>
+          <div class="five-inner inner">
+            <div class="inner-top">
+              <p class="type">Exercise</p>
+              <div class="meatball-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+              </div>
+            </div>
+            <div class="inner-bottom">
+              <h1 class="daily-current">1hr</h1>
+              <p class="daily-previous">Previous - 1hr</p>
 
-            <p class="weekly-current">4hrs</p>
-            <p class="weekly-previous">Previous - 5hrs</p>
+              <h1 class="weekly-current">4hrs</h1>
+              <p class="weekly-previous">Previous - 5hrs</p>
 
-            <p class="monthly-current">11hrs</p>
-            <p class="monthly-previous">Previous - 18hrs</p>
+              <h1 class="monthly-current">11hrs</h1>
+              <p class="monthly-previous">Previous - 18hrs</p>
+            </div>
           </div>
         </div>
       </div>
@@ -121,20 +161,29 @@
 
       <!-- social section -->
       <div class="card social six">
-        <div class="outer outer">
+        <div class="six-outer outer">
           <div class="icon-container">
             <img src="/images/icon-social.svg" alt="" class="icon" />
           </div>
-          <div class="inner inner">
-            Social
-            <p class="daily-current">1hr</p>
-            <p class="daily-previous">Previous - 3hrs</p>
+          <div class="six-inner inner">
+            <div class="inner-top">
+              <p class="type">Social</p>
+              <div class="meatball-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+              </div>
+            </div>
+            <div class="inner-bottom">
+              <h1 class="daily-current">1hr</h1>
+              <p class="daily-previous">Previous - 3hrs</p>
 
-            <p class="weekly-current">5hrs</p>
-            <p class="weekly-previous">Previous - 10hrs</p>
+              <h1 class="weekly-current">5hrs</h1>
+              <p class="weekly-previous">Previous - 10hrs</p>
 
-            <p class="monthly-current">21hrs</p>
-            <p class="monthly-previous">Previous - 23hrs</p>
+              <h1 class="monthly-current">21hrs</h1>
+              <p class="monthly-previous">Previous - 23hrs</p>
+            </div>
           </div>
         </div>
       </div>
@@ -142,20 +191,29 @@
 
       <!-- self care section -->
       <div class="card self-care seven">
-        <div class="outer outer">
+        <div class="seven-outer outer">
           <div class="icon-container">
             <img src="/images/icon-self-care.svg" alt="" class="icon" />
           </div>
-          <div class="inner inner">
-            Self Care
-            <p class="daily-current">0hrs</p>
-            <p class="daily-previous">Previous - 1hr</p>
+          <div class="seven-inner inner">
+            <div class="inner-top">
+              <p class="type">Self Care</p>
+              <div class="meatball-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+              </div>
+            </div>
+            <div class="inner-bottom">
+              <h1 class="daily-current">0hrs</h1>
+              <p class="daily-previous">Previous - 1hr</p>
 
-            <p class="weekly-current">2hrs</p>
-            <p class="weekly-previous">Previous - 2hrs</p>
+              <h1 class="weekly-current">2hrs</h1>
+              <p class="weekly-previous">Previous - 2hrs</p>
 
-            <p class="monthly-current">7hrs</p>
-            <p class="monthly-previous">Previous - 11hrs</p>
+              <h1 class="monthly-current">7hrs</h1>
+              <p class="monthly-previous">Previous - 11hrs</p>
+            </div>
           </div>
         </div>
       </div>
