--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
   <body>
     <div class="container">
       <div class="card profile one">
-        <div class="one-outer outer">
-          <div class="one-inner inner">
-            <div class="one-inner-left">
+        <div class="one-inner">
+          <div class="one-outer">
+            <div class="one-outer-left">
               <img
                 src="/images/image-jeremy.png"
                 alt="user profile picture"
                 class="profile-pic"
               />
             </div>
-            <div class="one-inner-right">
+            <div class="one-outer-right">
               <p>Report for</p>
-              <h1>Jeremy Robson</h1>
+              <h2>Jeremy Robson</h2>
             </div>
           </div>
-          <ul>
+          <ul class="sub-menu">
             <li><button>Daily</button></li>
             <li><button>Weekly</button></li>
             <li><button>Monthly</button></li>
