--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             </div>
             <div class="one-outer-right">
               <p>Report for</p>
-              <h2>Jeremy Robson</h2>
+              <h2>Jeremy</h2>
+              <h2>Robson</h2>
             </div>
           </div>
           <ul class="sub-menu">
