card text spacing
profile card sub menu spacing
card amount and state spacing

--- a/index.html
+++ b/index.html
@@ -57,13 +57,19 @@
             </div>
             <div class="inner-bottom">
               <h2 class="daily-current">5hrs</h2>
-              <p class="daily-previous">Previous - 7hrs</p>
+              <p class="daily-previous">
+                <span class="previous">Previous</span> - 7hrs
+              </p>
 
               <h2 class="weekly-current">32hrs</h2>
-              <p class="weekly-previous">Previous - 36hrs</p>
+              <p class="weekly-previous">
+                <span class="previous">Previous</span> - 36hrs
+              </p>
 
               <h2 class="monthly-current">103hrs</h2>
-              <p class="monthly-previous">Previous - 128hrs</p>
+              <p class="monthly-previous">
+                <span class="previous">Previous</span> - 128hrs
+              </p>
             </div>
           </div>
         </div>
@@ -87,13 +93,19 @@
             </div>
             <div class="inner-bottom">
               <h2 class="daily-current">1hr</h2>
-              <p class="daily-previous">Previous - 2hrs</p>
+              <p class="daily-previous">
+                <span class="previous">Previous</span> - 2hrs
+              </p>
 
               <h2 class="weekly-current">10hrs</h2>
-              <p class="weekly-previous">Previous - 8hrs</p>
+              <p class="weekly-previous">
+                <span class="previous">Previous</span> - 8hrs
+              </p>
 
               <h2 class="monthly-current">23hrs</h2>
-              <p class="monthly-previous">Previous - 29hrs</p>
+              <p class="monthly-previous">
+                <span class="previous">Previous</span> - 29hrs
+              </p>
             </div>
           </div>
         </div>
@@ -117,13 +129,19 @@
             </div>
             <div class="inner-bottom">
               <h2 class="daily-current">0hrs</h2>
-              <p class="daily-previous">Previous - 1hr</p>
+              <p class="daily-previous">
+                <span class="previous">Previous</span> - 1hr
+              </p>
 
               <h2 class="weekly-current">4hrs</h2>
-              <p class="weekly-previous">Previous - 7hrs</p>
+              <p class="weekly-previous">
+                <span class="previous">Previous</span> - 7hrs
+              </p>
 
               <h2 class="monthly-current">13hrs</h2>
-              <p class="monthly-previous">Previous - 19hrs</p>
+              <p class="monthly-previous">
+                <span class="previous">Previous</span> - 19hrs
+              </p>
             </div>
           </div>
         </div>
@@ -147,13 +165,19 @@
             </div>
             <div class="inner-bottom">
               <h2 class="daily-current">1hr</h2>
-              <p class="daily-previous">Previous - 1hr</p>
+              <p class="daily-previous">
+                <span class="previous">Previous</span> - 1hr
+              </p>
 
               <h2 class="weekly-current">4hrs</h2>
-              <p class="weekly-previous">Previous - 5hrs</p>
+              <p class="weekly-previous">
+                <span class="previous">Previous</span> - 5hrs
+              </p>
 
               <h2 class="monthly-current">11hrs</h2>
-              <p class="monthly-previous">Previous - 18hrs</p>
+              <p class="monthly-previous">
+                <span class="previous">Previous</span> - 18hrs
+              </p>
             </div>
           </div>
         </div>
@@ -177,13 +201,19 @@
             </div>
             <div class="inner-bottom">
               <h2 class="daily-current">1hr</h2>
-              <p class="daily-previous">Previous - 3hrs</p>
+              <p class="daily-previous">
+                <span class="previous">Previous</span> - 3hrs
+              </p>
 
               <h2 class="weekly-current">5hrs</h2>
-              <p class="weekly-previous">Previous - 10hrs</p>
+              <p class="weekly-previous">
+                <span class="previous">Previous</span> - 10hrs
+              </p>
 
               <h2 class="monthly-current">21hrs</h2>
-              <p class="monthly-previous">Previous - 23hrs</p>
+              <p class="monthly-previous">
+                <span class="previous">Previous</span> - 23hrs
+              </p>
             </div>
           </div>
         </div>
@@ -207,13 +237,19 @@
             </div>
             <div class="inner-bottom">
               <h2 class="daily-current">0hrs</h2>
-              <p class="daily-previous">Previous - 1hr</p>
+              <p class="daily-previous">
+                <span class="previous">Previous</span> - 1hr
+              </p>
 
               <h2 class="weekly-current">2hrs</h2>
-              <p class="weekly-previous">Previous - 2hrs</p>
+              <p class="weekly-previous">
+                <span class="previous">Previous</span> - 2hrs
+              </p>
 
               <h2 class="monthly-current">7hrs</h2>
-              <p class="monthly-previous">Previous - 11hrs</p>
+              <p class="monthly-previous">
+                <span class="previous">Previous</span> - 11hrs
+              </p>
             </div>
           </div>
         </div>
