--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             </div>
           </div>
           <ul class="sub-menu">
-            <li><button>Daily</button></li>
-            <li><button>Weekly</button></li>
-            <li><button>Monthly</button></li>
+            <li><button id="daily">Daily</button></li>
+            <li><button id="weekly">Weekly</button></li>
+            <li><button id="monthly">Monthly</button></li>
           </ul>
         </div>
       </div>
@@ -56,19 +56,22 @@
               </div>
             </div>
             <div class="inner-bottom">
-              <h2 class="daily-current">5hrs</h2>
+              <h2 id="daily-current">5hrs</h2>
               <p class="daily-previous">
-                <span class="previous">Previous</span> - 7hrs
+                <span class="previous-title">Previous</span>
+                <span class="previous-value">7hrs</span>
               </p>
 
               <h2 class="weekly-current">32hrs</h2>
               <p class="weekly-previous">
-                <span class="previous">Previous</span> - 36hrs
+                <span class="previous-title">Previous</span>
+                <span class="previous-value">36hrs</span>
               </p>
 
               <h2 class="monthly-current">103hrs</h2>
               <p class="monthly-previous">
-                <span class="previous">Previous</span> - 128hrs
+                <span class="previous-title">Previous</span>
+                <span class="previous-value">128hrs</span>
               </p>
             </div>
           </div>
@@ -94,17 +97,20 @@
             <div class="inner-bottom">
               <h2 class="daily-current">1hr</h2>
               <p class="daily-previous">
-                <span class="previous">Previous</span> - 2hrs
+                <span class="previous-title">Previous</span>
+                <span class="previous-value">2hrs</span>
               </p>
 
               <h2 class="weekly-current">10hrs</h2>
               <p class="weekly-previous">
-                <span class="previous">Previous</span> - 8hrs
+                <span class="previous-title">Previous</span>
+                <span class="previous-value">8hrs</span>
               </p>
 
               <h2 class="monthly-current">23hrs</h2>
               <p class="monthly-previous">
-                <span class="previous">Previous</span> - 29hrs
+                <span class="previous-title">Previous</span>
+                <span class="previous-value">29hrs</span>
               </p>
             </div>
           </div>
@@ -130,17 +136,20 @@
             <div class="inner-bottom">
               <h2 class="daily-current">0hrs</h2>
               <p class="daily-previous">
-                <span class="previous">Previous</span> - 1hr
+                <span class="previous-title">Previous</span>
+                <span class="previous-value">1hr</span>
               </p>
 
               <h2 class="weekly-current">4hrs</h2>
               <p class="weekly-previous">
-                <span class="previous">Previous</span> - 7hrs
+                <span class="previous-title">Previous</span>
+                <span class="previous-value">7hrs</span>
               </p>
 
               <h2 class="monthly-current">13hrs</h2>
               <p class="monthly-previous">
-                <span class="previous">Previous</span> - 19hrs
+                <span class="previous-title">Previous</span>
+                <span class="previous-value">19hrs</span>
               </p>
             </div>
           </div>
@@ -166,17 +175,20 @@
             <div class="inner-bottom">
               <h2 class="daily-current">1hr</h2>
               <p class="daily-previous">
-                <span class="previous">Previous</span> - 1hr
+                <span class="previous-title">Previous</span>
+                <span class="previous-value">1hr</span>
               </p>
 
               <h2 class="weekly-current">4hrs</h2>
               <p class="weekly-previous">
-                <span class="previous">Previous</span> - 5hrs
+                <span class="previous-title">Previous</span>
+                <span class="previous-value">5hrs</span>
               </p>
 
               <h2 class="monthly-current">11hrs</h2>
               <p class="monthly-previous">
-                <span class="previous">Previous</span> - 18hrs
+                <span class="previous-title">Previous</span>
+                <span class="previous-value">18hrs</span>
               </p>
             </div>
           </div>
@@ -202,17 +214,20 @@
             <div class="inner-bottom">
               <h2 class="daily-current">1hr</h2>
               <p class="daily-previous">
-                <span class="previous">Previous</span> - 3hrs
+                <span class="previous-title">Previous</span>
+                <span class="previous-value">3hrs</span>
               </p>
 
               <h2 class="weekly-current">5hrs</h2>
               <p class="weekly-previous">
-                <span class="previous">Previous</span> - 10hrs
+                <span class="previous-title">Previous</span>
+                <span class="previous-value">10hrs</span>
               </p>
 
               <h2 class="monthly-current">21hrs</h2>
               <p class="monthly-previous">
-                <span class="previous">Previous</span> - 23hrs
+                <span class="previous-title">Previous</span>
+                <span class="previous-value">23hrs</span>
               </p>
             </div>
           </div>
@@ -238,17 +253,20 @@
             <div class="inner-bottom">
               <h2 class="daily-current">0hrs</h2>
               <p class="daily-previous">
-                <span class="previous">Previous</span> - 1hr
+                <span class="previous-title">Previous</span>
+                <span class="previous-value">1hr</span>
               </p>
 
               <h2 class="weekly-current">2hrs</h2>
               <p class="weekly-previous">
-                <span class="previous">Previous</span> - 2hrs
+                <span class="previous-title">Previous</span>
+                <span class="previous-value">2hrs</span>
               </p>
 
               <h2 class="monthly-current">7hrs</h2>
               <p class="monthly-previous">
-                <span class="previous">Previous</span> - 11hrs
+                <span class="previous-title">Previous</span>
+                <span class="previous-value">11hrs</span>
               </p>
             </div>
           </div>
