--- a/index.html
+++ b/index.html
@@ -56,22 +56,10 @@
               </div>
             </div>
             <div class="inner-bottom">
-              <h2 id="daily-current">5hrs</h2>
+              <h2 id="work-current">00hrs</h2>
               <p class="daily-previous">
-                <span class="previous-title">Previous</span>
-                <span class="previous-value">7hrs</span>
-              </p>
-
-              <h2 class="weekly-current">32hrs</h2>
-              <p class="weekly-previous">
-                <span class="previous-title">Previous</span>
-                <span class="previous-value">36hrs</span>
-              </p>
-
-              <h2 class="monthly-current">103hrs</h2>
-              <p class="monthly-previous">
-                <span class="previous-title">Previous</span>
-                <span class="previous-value">128hrs</span>
+                <span class="previous-title">Value</span>
+                <span id="work-previous">00hrs</span>
               </p>
             </div>
           </div>
@@ -95,22 +83,10 @@
               </div>
             </div>
             <div class="inner-bottom">
-              <h2 class="daily-current">1hr</h2>
+              <h2 id="play-current">00hrs</h2>
               <p class="daily-previous">
-                <span class="previous-title">Previous</span>
-                <span class="previous-value">2hrs</span>
-              </p>
-
-              <h2 class="weekly-current">10hrs</h2>
-              <p class="weekly-previous">
-                <span class="previous-title">Previous</span>
-                <span class="previous-value">8hrs</span>
-              </p>
-
-              <h2 class="monthly-current">23hrs</h2>
-              <p class="monthly-previous">
-                <span class="previous-title">Previous</span>
-                <span class="previous-value">29hrs</span>
+                <span class="previous-title">Value</span>
+                <span id="play-previous">00hrs</span>
               </p>
             </div>
           </div>
@@ -134,22 +110,10 @@
               </div>
             </div>
             <div class="inner-bottom">
-              <h2 class="daily-current">0hrs</h2>
+              <h2 id="study-current">00hrs</h2>
               <p class="daily-previous">
-                <span class="previous-title">Previous</span>
-                <span class="previous-value">1hr</span>
-              </p>
-
-              <h2 class="weekly-current">4hrs</h2>
-              <p class="weekly-previous">
-                <span class="previous-title">Previous</span>
-                <span class="previous-value">7hrs</span>
-              </p>
-
-              <h2 class="monthly-current">13hrs</h2>
-              <p class="monthly-previous">
-                <span class="previous-title">Previous</span>
-                <span class="previous-value">19hrs</span>
+                <span class="previous-title">Value</span>
+                <span id="study-previous">00hr</span>
               </p>
             </div>
           </div>
@@ -173,22 +137,10 @@
               </div>
             </div>
             <div class="inner-bottom">
-              <h2 class="daily-current">1hr</h2>
+              <h2 id="exercise-current">00hr</h2>
               <p class="daily-previous">
-                <span class="previous-title">Previous</span>
-                <span class="previous-value">1hr</span>
-              </p>
-
-              <h2 class="weekly-current">4hrs</h2>
-              <p class="weekly-previous">
-                <span class="previous-title">Previous</span>
-                <span class="previous-value">5hrs</span>
-              </p>
-
-              <h2 class="monthly-current">11hrs</h2>
-              <p class="monthly-previous">
-                <span class="previous-title">Previous</span>
-                <span class="previous-value">18hrs</span>
+                <span class="previous-title">Value</span>
+                <span id="exercise-previous">00hrs</span>
               </p>
             </div>
           </div>
@@ -212,22 +164,10 @@
               </div>
             </div>
             <div class="inner-bottom">
-              <h2 class="daily-current">1hr</h2>
+              <h2 id="social-current">00hr</h2>
               <p class="daily-previous">
-                <span class="previous-title">Previous</span>
-                <span class="previous-value">3hrs</span>
-              </p>
-
-              <h2 class="weekly-current">5hrs</h2>
-              <p class="weekly-previous">
-                <span class="previous-title">Previous</span>
-                <span class="previous-value">10hrs</span>
-              </p>
-
-              <h2 class="monthly-current">21hrs</h2>
-              <p class="monthly-previous">
-                <span class="previous-title">Previous</span>
-                <span class="previous-value">23hrs</span>
+                <span class="previous-title">Value</span>
+                <span id="social-previous">00hrs</span>
               </p>
             </div>
           </div>
@@ -251,22 +191,10 @@
               </div>
             </div>
             <div class="inner-bottom">
-              <h2 class="daily-current">0hrs</h2>
+              <h2 id="self-care-current">00hrs</h2>
               <p class="daily-previous">
-                <span class="previous-title">Previous</span>
-                <span class="previous-value">1hr</span>
-              </p>
-
-              <h2 class="weekly-current">2hrs</h2>
-              <p class="weekly-previous">
-                <span class="previous-title">Previous</span>
-                <span class="previous-value">2hrs</span>
-              </p>
-
-              <h2 class="monthly-current">7hrs</h2>
-              <p class="monthly-previous">
-                <span class="previous-title">Previous</span>
-                <span class="previous-value">11hrs</span>
+                <span class="previous-title">Value</span>
+                <span id="self-care-previous">00hr</span>
               </p>
             </div>
           </div>
